[project]
name = "property-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawlee[beautifulsoup,curl-impersonate,playwright]==0.6.10",
    "fastapi==0.115.12",
    "pandas==2.3.0",
    "pyarrow==20.0.0",
    "python-dotenv==1.1.0",
    "uvicorn==0.34.3",
]
